# amp-orchestra-sdk

./: .gitignore  AGENTS.md  AMP-CONNECTION-DEBUG-GUIDE.md  AMP-JSON-STREAMING-INTEGRATION-GUIDE.md  AMP-ORCHESTRA-ARCHITECTURE.md  AMP-ORCHESTRA-REDESIGN-PLAN.md  AMP-ORCHESTRA-UNIFIED-DESIGN.md  Amp-Connection-Architecture.md  COMMAND_SPAWNING_WORKTREE_UPDATES.md  CONDUCTOR_LAYOUT_IMPLEMENTATION.md  CONNECTION_TEST_PLAN.md  Cargo.toml  Dual-Amp-TUI-Sessions-Plan.md  ENV_SWITCH_TEST_PLAN.md  FEATURE_FLAGS.md  MEMORY_LEAK_FIXES_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PHASE_0_CLEANUP_SUMMARY.md  PHASE_A_IMPLEMENTATION_SUMMARY.md  README.md  Redesign_Spec  SETUP.md  STEP1-MIGRATION-ANALYSIS.md  TERMINAL_FIX_SUMMARY.md  THREADS_ARCHITECTURE_IMPLEMENTATION.md  THREAD_SESSION_COMMANDS.md  THREAD_UI_IMPLEMENTATION.md  TUI_CRITICAL_FIXES_SUMMARY.md  TUI_TERMINAL_POSTMORTEM.md  TUI_TERMINAL_POSTMORTEM_SEPT2025.md  WORKTREE_FRONTEND_INTEGRATION_SUMMARY.md  WORKTREE_IMPLEMENTATION_SUMMARY.md  WORKTREE_MANAGER_IMPLEMENTATION.md  amp-smoke.sh  create-placeholder-icon.cjs  debug-amp-connection.html  enable-threads-architecture.js  package-lock.json  package.json  pnpm-lock.yaml  (+11 more)
desktop-ui/: RESIZABLE_PANELS_DEMO.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-ui/src-tauri/icons/: icon.icns
desktop-ui/src-tauri/migrations/: 001_initial.sql  002_chat_sessions.sql  003_chat_sessions_agent_mode.sql  004_add_toolbox_profiles.sql  005_add_worktrees_support.sql  006_batch_processing.sql  007_add_threads_architecture.sql
desktop-ui/src-tauri/src/: amp_auth.rs  amp_proxy.rs  app_state.rs  batch_commands.rs  batch_engine.rs  cli_auth.rs  cli_detection.rs  commands.rs  enhanced_session_commands.rs  env_composer.rs  env_composer_tests.rs  keychain_auth.rs  lib.rs  main.rs  profile_auth.rs  profile_workers.rs  runtime_env.rs  runtime_env_tests.rs  session_commands.rs  session_manager.rs  terminal.rs  thread_session_commands.rs  toolbox_profiles.rs  toolbox_resolver.rs  toolbox_resolver_tests.rs  worktree.rs  worktree_commands.rs  worktree_manager.rs
desktop-ui/src-tauri/src/exporters/: export_commands.rs  mod.rs  test_exporters.rs
desktop-ui/src-tauri/src/resources/: default_profiles.json
desktop-ui/src-tauri/tests/: pty_smoke_test.rs
e2e/: basic_test.test.mjs  ui_smoke.test.mjs
test-toolbox/: README.md
tools/: connection-smoke.mjs  debug-agent-mode-complete.mjs  debug-agent-mode.mjs  debug-webview-simple.mjs  fake-amp-cli.mjs  fix-agent-mode-persistence.mjs  force-config-reload.mjs  guided-agent-mode-test.mjs  manual-agent-mode-test.mjs  simple-ui-check.mjs  test-agent-mode-basic.mjs  test-agent-mode-persistence.mjs  test-ui-agent-mode-complete.mjs  test-webview-eval.mjs  verify-agent-mode-fix.mjs  (+2 more)
unified-core/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
unified-core/examples/: basic_usage.rs
unified-core/src/: domain.rs  error.rs  git.rs  git_old.rs  legacy_node.rs  lib.rs  modern.rs  persistence.rs  tests.rs  worktree_manager.rs
(+119 files in other folders)
