[package]
name = "amp-orchestra"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
unified-core = { path = "../../unified-core", features = ["persistence"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "^2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = "5.0"
which = "6.0"
regex = "1.0"
log = { workspace = true }
keyring = "3.0"
dashmap = "6.0"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
portable-pty = "0.8"
once_cell = "1"
anyhow = "1"
walkdir = "2"
blake3 = "1"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
legacy_node = ["unified-core/legacy_node"]
worktree-manager = ["unified-core/persistence"]

